--- a/about.html
+++ b/about.html
@@ -12,12 +12,17 @@
 
 
 <div class="container">
-  <header>
-      <nav>
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-      </nav>
-  </header>
+
+  <div class="header">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+    </nav>
+  </div>
+
+  <div class="about">
+    <h1>About Us</h1>
+  </div>
 
   <body>
 
