matched formatting with UX design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Essentialism Home</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -15,25 +15,27 @@
 
   <div class="header">
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="index.html">HOME</a>
+      <a href="about.html">ABOUT US</a>
     </nav>
   </div>
 
   <div class="welcome">
-    <h1>Welcome to Essentialism!</h1>
-    <p>Tired of feeling drained or like you’re spinning your wheels at the end of every day? Become an Essentialist so you can end your days feeling fulfilled and excited about tomorrow! Our goal is to empower you to change or get rid of those projects that drain your energy using a unique approach to align your efforts with your values.</p>
-    <p>Signing up is free and quick, simply choose which values speak to you (or add your own!). After that, make a list of projects you’re working on now. Once that’s done, ALL of your values and projects will be shown side by side. From there, easily manage where your valuable energy is spent. You can update your projects and values at any time too, so as you prune those draining tasks you will be able to see (and feel!) the difference. What are you waiting for, get started now!</p>
+    <h1>WELCOME TO ESSENTIALISM</h1>
+    <p>TIRED OF FEELING DRAINED OR LIKE YOU'RE SPINNING YOUR WHEELS AT THE END OF EVERY DAY? BECOME AN ESSENTIALIST SO YOU CAN END YOUR DAYS FEELING FULFILLED AND EXCITED ABOUT TOMORROW! OUR GOAL IS TO EMPOWER YOU TO CHANGE OR GET RID OF THOSE PROJECTS THAT DRAIN YOUR ENERGY USING A UNIQUE APPROACH TO ALIGN YOUR EFFORTS WITH YOUR VALUES.</p>
+    <p>SIGNING UP IS FREE AND QUICK, SIMPLY CHOOSE WHICH VALUES SPEAK TO YOU (OR ADD YOUR OWN!) AFTER THAT, MAKE A LIST OF PROJECTS YOU'RE WORKING ON NOW. ONCE THAT'S DONE, ALL OF YOUR VALUES AND PROJECTS WILL BE SHOWN SIDE BY SIDE. FROM THERE, EASILY MANAGE WHERE YOUR VALUABLE ENERGY IS SPEND. YOU CAN UPDATE YOUR PROJECTS AND VALUES AT ANY TIME TOO, SO AS YOU PRUNE THOSE DRAINING TASKS YOU WILL BE ABLE TO SEE (AND FEEL!) THE DIFFERENCE. WHAT ARE YOU WAITING FOR, GET STARTED NOW!</p>
   </div>
 
   <div class="signup">
-    <a href="about.html">Sign Up</a>
+    <nav>
+      <a href="index.html">SIGN UP</a>
+    </nav>
   </div>
 
   <div class="footer">
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="index.html">HOME</a>
+      <a href="about.html">ABOUT US</a>
     </nav>
   </div>
 
