--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
   <title>About Us</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -15,18 +15,23 @@
 
   <div class="header">
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="index.html">HOME</a>
+      <a href="about.html">ABOUT US</a>
     </nav>
   </div>
 
   <div class="about">
-    <h1>About Us</h1>
+    <h1>ABOUT US</h1>
   </div>
 
-  <body>
+  <div class="footer">
+    <nav>
+      <a href="index.html">HOME</a>
+      <a href="about.html">ABOUT US</a>
+    </nav>
+  </div>
 
-  </body>
+
 </div>
 
 
