--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 <div class="container">
 
   <div class="header">
+    <a href="index.html"><img src="img/essentialism.png"></a>
     <nav>
       <a href="index.html">HOME</a>
       <a href="about.html">ABOUT US</a>
