--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <div class="container">
 
+
   <div class="header">
+    <a href="index.html"><img src="img/essentialism.png"></a>
     <nav>
       <a href="index.html">HOME</a>
       <a href="about.html">ABOUT US</a>
