about us page content

--- a/about.html
+++ b/about.html
@@ -25,6 +25,39 @@
     <h1>ABOUT US</h1>
   </div>
 
+  <div class="people">
+    <div class="person">
+      <img src="img/pbaldwin.jpeg">
+      <p>PATRICK BALDWIN</p>
+      <p>PROJECT MANAGER</p>
+      <a href="https://github.com/orgs/BW-Essentialism-2/people/patrickb42">VIEW PATRICK'S GITHUB</a>
+    </div>
+    <div class="person">
+      <img src="img/jorndorff.png">
+      <p>JEFF ORNDORFF</p>
+      <p>BACK END</p>
+      <a href="https://github.com/orgs/BW-Essentialism-2/people/Jeffreyo3">VIEW JEFF'S GITHUB</a>
+    </div>
+    <div class="person">
+      <img src="img/hsisco.png">
+      <p>HYSEN SISCO</p>
+      <p>FRONT END</p>
+      <a href="https://github.com/orgs/BW-Essentialism-2/people/hsisco">VIEW HYSEN'S GITHUB</a>
+    </div>
+    <div class="person">
+      <img src="img/dgraham.png">
+      <p>DUSTIN GRAHAM</p>
+      <p>FRONT END</p>
+      <a href="https://github.com/orgs/BW-Essentialism-2/people/DustinG98">VIEW DUSTIN'S GITHUB</a>
+    </div>
+    <div class="person">
+      <img src="img/dcornelison.jpg">
+      <p>DEREK CORNELISON</p>
+      <p>USER INTERFACE</p>
+      <a href="https://github.com/orgs/BW-Essentialism-2/people/dcornelison1216">VIEW DEREK'S GITHUB</a>
+    </div>
+  </div>
+
   <div class="footer">
     <nav>
       <a href="index.html">HOME</a>
