marketing copy proofread

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="img/skier.jpeg">
   </div>
   <div class="welcome cave">
-    <p>FROM THERE, EASILY MANAGE WHERE YOUR VALUABLE ENERGY IS SPEND. YOU CAN UPDATE YOUR PROJECTS AND VALUES AT ANY TIME TOO, SO AS YOU PRUNE THOSE DRAINING TASKS YOU WILL BE ABLE TO SEE (AND FEEL!) THE DIFFERENCE. WHAT ARE YOU WAITING FOR, GET STARTED NOW!</p>
+    <p>FROM THERE, EASILY MANAGE WHERE YOUR VALUABLE ENERGY IS SPENT. YOU CAN UPDATE YOUR PROJECTS AND VALUES AT ANY TIME TOO, SO AS YOU PRUNE THOSE DRAINING TASKS YOU WILL BE ABLE TO SEE (AND FEEL!) THE DIFFERENCE. WHAT ARE YOU WAITING FOR, GET STARTED NOW!</p>
     <img src="img/cave.jpeg">
   </div>
 
