--- a/about.html
+++ b/about.html
@@ -30,31 +30,31 @@
       <img src="img/pbaldwin.jpeg">
       <p>PATRICK BALDWIN</p>
       <p>PROJECT MANAGER</p>
-      <a href="https://github.com/orgs/BW-Essentialism-2/people/patrickb42">VIEW PATRICK'S GITHUB</a>
+      <a href="https://github.com/patrickb42">VIEW PATRICK'S GITHUB</a>
     </div>
     <div class="person">
       <img src="img/jorndorff.png">
       <p>JEFF ORNDORFF</p>
       <p>BACK END</p>
-      <a href="https://github.com/orgs/BW-Essentialism-2/people/Jeffreyo3">VIEW JEFF'S GITHUB</a>
+      <a href="https://github.com/Jeffreyo3">VIEW JEFF'S GITHUB</a>
     </div>
     <div class="person">
       <img src="img/hsisco.png">
       <p>HYSEN SISCO</p>
       <p>FRONT END</p>
-      <a href="https://github.com/orgs/BW-Essentialism-2/people/hsisco">VIEW HYSEN'S GITHUB</a>
+      <a href="https://github.com/hsisco">VIEW HYSEN'S GITHUB</a>
     </div>
     <div class="person">
       <img src="img/dgraham.png">
       <p>DUSTIN GRAHAM</p>
       <p>FRONT END</p>
-      <a href="https://github.com/orgs/BW-Essentialism-2/people/DustinG98">VIEW DUSTIN'S GITHUB</a>
+      <a href="https://github.com/DustinG98">VIEW DUSTIN'S GITHUB</a>
     </div>
     <div class="person">
-      <img src="img/dcornelison.jpg">
+      <img src="img/dcornelison.jpeg">
       <p>DEREK CORNELISON</p>
       <p>USER INTERFACE</p>
-      <a href="https://github.com/orgs/BW-Essentialism-2/people/dcornelison1216">VIEW DEREK'S GITHUB</a>
+      <a href="https://github.com/dcornelison1216">VIEW DEREK'S GITHUB</a>
     </div>
   </div>
 
