--- a/about.html
+++ b/about.html
@@ -1,18 +1,19 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
   <title>About Us</title>
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link href="css/index.css" rel="stylesheet">
+  <script type="text/javascript" src="js/about.js"></script>
+
 </head>
 
-
 <div class="container">
-
   <div class="header">
     <a href="index.html"><img src="img/essentialism.png"></a>
     <nav>
@@ -23,39 +24,65 @@
 
   <div class="about">
     <h1>ABOUT US</h1>
+    <p>MEET THE ESSENTIALISM DEVELOPERS</p>
   </div>
 
-  <div class="people">
-    <div class="person">
-      <img src="img/pbaldwin.jpeg">
-      <p>PATRICK BALDWIN</p>
-      <p>PROJECT MANAGER</p>
-      <a href="https://github.com/patrickb42">VIEW PATRICK'S GITHUB</a>
-    </div>
-    <div class="person">
+
+  <!-- Slideshow container -->
+  <div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade first">
+      <div class="numbertext">1 / 4</div>
       <img src="img/jorndorff.png">
-      <p>JEFF ORNDORFF</p>
-      <p>BACK END</p>
-      <a href="https://github.com/Jeffreyo3">VIEW JEFF'S GITHUB</a>
+      <div class="text">
+        <p>JEFF ORNDORFF</p>
+        <p>BACK END</p>
+        <a href="https://github.com/Jeffreyo3">VIEW JEFF'S GITHUB</a>
+      </div>
     </div>
-    <div class="person">
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 4</div>
       <img src="img/hsisco.png">
-      <p>HYSEN SISCO</p>
-      <p>FRONT END</p>
-      <a href="https://github.com/hsisco">VIEW HYSEN'S GITHUB</a>
+      <div class="text">
+        <p>HYSEN SISCO</p>
+        <p>FRONT END</p>
+        <a href="https://github.com/hsisco">VIEW HYSEN'S GITHUB</a>
+      </div>
     </div>
-    <div class="person">
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 4</div>
       <img src="img/dgraham.png">
-      <p>DUSTIN GRAHAM</p>
-      <p>FRONT END</p>
-      <a href="https://github.com/DustinG98">VIEW DUSTIN'S GITHUB</a>
+      <div class="text">
+        <p>DUSTIN GRAHAM</p>
+        <p>FRONT END</p>
+        <a href="https://github.com/DustinG98">VIEW DUSTIN'S GITHUB</a>
+      </div>
     </div>
-    <div class="person">
+
+    <div class="mySlides fade">
+      <div class="numbertext">4 / 4</div>
       <img src="img/dcornelison.jpeg">
-      <p>DEREK CORNELISON</p>
-      <p>USER INTERFACE</p>
-      <a href="https://github.com/dcornelison1216">VIEW DEREK'S GITHUB</a>
+      <div class="text">
+        <p>DEREK CORNELISON</p>
+        <p>USER INTERFACE</p>
+        <a href="https://github.com/dcornelison1216">VIEW DEREK'S GITHUB</a>
+      </div>
     </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+
+  <!-- The dots/circles -->
+  <div style="text-align:center" class="dots">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
   </div>
 
   <div class="footer">
@@ -65,8 +92,6 @@
     </nav>
   </div>
 
-
 </div>
-
 
 </html>
